--- a/libs/client/schedule/feature/src/lib/workout/workout.component.html
+++ b/libs/client/schedule/feature/src/lib/workout/workout.component.html
@@ -76,7 +76,7 @@
               <p class="with-icon text-xl leading-6 font-semibold text-gray-900 dark:text-gray-900"><mat-icon>date_range</mat-icon> Distance</p>
             </dt>
             <dd class="mt-2  text-base">
-              <p class=""> {{workout?.proposedDistance}} </p>
+              <p class=""> {{workout?.proposedDistance}} km</p>
             </dd>
           </div>
           <div class="relative">
