--- a/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.scss
+++ b/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.scss
@@ -99,7 +99,7 @@ h2 {
 
 .hrdark {
     height: 1.5px;
-    background-color: #1b1a1b !important;
+    background-color: #0284c7 !important;
     border: none;
     // width:
 }
