--- a/libs/client/schedule/feature/src/lib/workout/workout.component.html
+++ b/libs/client/schedule/feature/src/lib/workout/workout.component.html
@@ -53,7 +53,7 @@
               <p class="with-icon text-xl leading-6 font-semibold text-gray-900 dark:text-gray-900">	<mat-icon> email</mat-icon> Organiser</p>
             </dt>
             <dd class="mt-2  text-base">
-              <p class="">takumuguti@gmail.com</p>
+              <p class="">{{workout?.organiser}}</p>
             </dd>
           </div>
         </dl>
