--- a/libs/client/login/feature/src/lib/loginpage/loginpage.component.scss
+++ b/libs/client/login/feature/src/lib/loginpage/loginpage.component.scss
@@ -77,6 +77,19 @@ mat-form-field {
     background-repeat: no-repeat;
 }
 
+.lightgrey {
+    color: rgb(164, 164, 164);
+}
+
 mat-error {
     text-align: right;
+}
+
+.w-100 {
+    width: 100% !important;
+}
+
+.center {
+    display: flex;
+    justify-content: center;
 }
