final logo component with dark mode

--- a/libs/client/login/feature/src/lib/loginpage/loginpage.component.html
+++ b/libs/client/login/feature/src/lib/loginpage/loginpage.component.html
@@ -17,8 +17,11 @@
 
           <form [formGroup]="loginFrm">
 
+
             <div class="center w-100">
-              <training-buddy-logo column="true" height="80"></training-buddy-logo>
+
+              <training-buddy-logo dark="true" height="80"></training-buddy-logo>
+
             </div>
             <br>
             <br>
