--- a/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.scss
+++ b/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.scss
@@ -1,8 +1,12 @@
 #addbutton {
-    background-color: #1b1a1b !important;
+    background-color:  #0284c7 !important;
     position: fixed;
     top: 80%;
     left: 80%;
+}
+
+#addbutton:hover{
+    background-color: #0369a1 !important;
 }
 
 .text-center {
