💄💅 (fix colours and other UI bugs)
fix history to show in correct order.

--- a/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.scss
+++ b/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.scss
@@ -32,7 +32,7 @@
 }
 
 .spinner ::ng-deep .mat-progress-spinner circle, .mat-spinner circle {
-    stroke: #1b1a1b;
+    stroke: #0284c7 !important;
 }
 
 .row {
@@ -57,7 +57,7 @@ mat-form-field {
 }
 
 .spinner ::ng-deep .mat-progress-spinner circle, .mat-spinner circle {
-    stroke: #000000;
+    stroke: #0284c7 !important;
 }
 
 mat-spinner {
