--- a/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.html
+++ b/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.html
@@ -1,5 +1,5 @@
 <training-buddy-unsigned-navbar></training-buddy-unsigned-navbar>
-
+<!-- <training-buddy-signed-navbar></training-buddy-signed-navbar> -->
 <div *ngIf="loading" class="spinner" id="pagespinner"><mat-spinner></mat-spinner></div>
 <div *ngIf="!loading" class="px-4">
 
@@ -68,7 +68,7 @@
             <div *ngFor="let day of workouts" >
                 <div class="text-center ">
                     <h2>
-                        {{day[0]?.startDate.day}} {{day[0]?.startDate.month}}
+                        {{day[0]?.startDate.day}} {{day[0]?.startDate.month}} {{day[0]?.startDate.year}}
                     </h2>
 
                 </div>
@@ -99,7 +99,7 @@
         <div *ngFor="let day of workoutHistory" >
             <div class="text-center ">
                 <h2>
-                    {{day[0]?.startDate.day}} {{day[0]?.startDate.month}}
+                    {{day[0]?.startDate.day}} {{day[0]?.startDate.month}} {{day[0]?.startDate.year}}
                 </h2>
 
             </div>
