--- a/libs/client/shared/components/navbar/ui/src/lib/settingsnavbar/settingsnavbar.component.html
+++ b/libs/client/shared/components/navbar/ui/src/lib/settingsnavbar/settingsnavbar.component.html
@@ -1,13 +1,13 @@
 <p>
 
     <mat-toolbar id="bar">
-  
+
       <mat-toolbar-row>
-  
+
         <span>Training-Buddy</span>
-  
+
         <!-- <span class="example-spacer"></span> -->
-  
+        <!-- <training-buddy-logo id="logo"></training-buddy-logo> -->
         <div class="wrapper">
             <div class="rightcontent">
                 <mat-icon [routerLink]="['/settings']">settings</mat-icon>
@@ -16,7 +16,7 @@
 
 
       </mat-toolbar-row>
-  
+
     </mat-toolbar>
-  
+
   </p>
