--- a/libs/client/schedule/feature/src/lib/workout-invite/workout-invite.component.scss
+++ b/libs/client/schedule/feature/src/lib/workout-invite/workout-invite.component.scss
@@ -10,11 +10,12 @@
 }
 
 #pagespinner {
-    top: 50%;
-    left: 50%;
+  margin: auto;
+  width: 50%;
+  padding: 10px;
 }
 
 
 .spinner ::ng-deep .mat-progress-spinner circle, .mat-spinner circle {
-    stroke: #1b1a1b;
+  stroke: #0284c7 !important;
 }
