--- a/libs/client/athlete-profile/feature/src/lib/athleteprofile/athleteprofile.component.html
+++ b/libs/client/athlete-profile/feature/src/lib/athleteprofile/athleteprofile.component.html
@@ -1,24 +1,18 @@
-<div id="background" [ngStyle]="{'background-image': 'url(' + img + ')'}">
-
+<div class="font-serif">
   <training-buddy-unsigned-navbar *ngIf="!update"></training-buddy-unsigned-navbar>
   <training-buddy-back-navbar *ngIf="update" title="Activity Settings"></training-buddy-back-navbar>
 
-  <mat-grid-list cols="1" rows="1" rowHeight="2:1" [@fadeIn]>
+  <mat-grid-list cols="1" rows="1" rowHeight="2:1" [@fadeIn] >
 
       <mat-card>
 
           <mat-card-content>
 
             <form [formGroup]="prefFrm">
-
-              <!-- <h1 class="text-center">LOGO HERE</h1> -->
-              <mat-label> Rate your proficiency for each activity</mat-label>
-
-
-              <mat-label>Add Activities: </mat-label>
-              <br />
-              <mat-hint>These will be updated as you do activities later.</mat-hint>
-              <br />
+              <p class=" text-center mb-0 pb-0">
+                <mat-label class=" text-base"> Select and rate your ability for each activity</mat-label> <br>
+                <mat-hint class=" ">These will be updated as you do activities later.</mat-hint>
+              </p>
               <mat-checkbox (change)="updateError()" (click) = "toggleRunning()" class="mt-2" formControlName="running">Running</mat-checkbox>
               <div *ngIf="running" class="grid grid-flow-row-dense grid-cols-8">
 
@@ -32,7 +26,7 @@
                 </div>
 
                 <div class="content-center">
-                  <div class="mt-3 ml-1"><mat-label>{{ runRating }} </mat-label></div>
+                  <div class=" mt-3 ml-1"><mat-label>{{ runRating }}/5 </mat-label></div>
                 </div>
 
               </div>
@@ -46,11 +40,11 @@
                   step="0.1"
                   min="0"
                   max="5"
-                  aria-label="units" value="{{rateDefault}}"></mat-slider>
+                  aria-label=" units" value="{{rateDefault}}"></mat-slider>
                 </div>
 
                 <div class="content-center">
-                  <div class="mt-3 ml-1"><mat-label>{{ cycleRating }} </mat-label></div>
+                  <div class=" mt-3 ml-1"><mat-label>{{ cycleRating }}/5 </mat-label></div>
                 </div>
 
               </div>
@@ -68,7 +62,7 @@
                 </div>
 
                 <div class="content-center">
-                  <div class="mt-3 ml-1"><mat-label>{{ swimRating }} </mat-label></div>
+                  <div class=" mt-3 ml-1"><mat-label>{{ swimRating }}/5 </mat-label></div>
                 </div>
 
               </div>
@@ -86,7 +80,7 @@
                 </div>
 
                 <div class="content-center">
-                  <div class="mt-3 ml-1"><mat-label>{{ liftRating }} </mat-label></div>
+                  <div class=" mt-3 ml-1"><mat-label>{{ liftRating }}/5 </mat-label></div>
                 </div>
 
               </div>
@@ -110,7 +104,7 @@
                 </div>
 
                 <div class="content-center">
-                  <div class="mt-3 ml-1"><mat-label>{{ radius }}km</mat-label></div>
+                  <div class=" mt-3 ml-1"><mat-label>{{ radius }}km</mat-label></div>
                 </div>
 
               </div>
@@ -124,7 +118,7 @@
 
               <!--Submit button-->
               <div class="submitButton mt-3">
-                  <button (click)="save()" id="signup" class="text-center ml-1" mat-raised-button color="primary">Save</button>
+                  <button (click)="save()" id="signup" class=" text-center ml-1" mat-raised-button color="primary">Save</button>
               </div>
 
             </form>
