--- a/libs/client/athlete-profile/feature/src/lib/athleteprofile/athleteprofile.component.scss
+++ b/libs/client/athlete-profile/feature/src/lib/athleteprofile/athleteprofile.component.scss
@@ -2,12 +2,8 @@ mat-card {
     max-width: 400px;
     width: 90vw;
     margin: 2em auto;
-    margin-top: 8em;
     padding: 2em auto;
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    transform: translate(-50%, -0%);
+    position: relative;
     background-color: rgba(255, 255, 255, 1);
 }
 
@@ -29,6 +25,7 @@ mat-form-field {
     display: block;
 }
 
+
 .rightShift {
     display: flex;
     justify-content: flex-end;
@@ -36,12 +33,12 @@ mat-form-field {
 
 #signup {
     width: 100%;
-    background-color: #1b1a1b !important;
+    background-color: #0892d0 !important;
 }
 
 .nextButton {
     width: 30%;
-    background-color: #1b1a1b !important;
+    background-color: #0892d0 !important;
 }
 
 .logIn {
@@ -102,23 +99,28 @@ textarea {
     max-height: 12vh !important;
 }
 
-::ng-deep .mat-checkbox-checked .mat-checkbox-background, 
+::ng-deep .mat-checkbox-checked .mat-checkbox-background,
 .mat-checkbox-indeterminate .mat-checkbox-background {
-  background-color: #1b1A1b !important;
+  background-color: #0892d0 !important;
 }
 
 ::ng-deep .mat-slider-thumb {
-	background-color: #1b1A1b !important;
+	background-color: #0892d0 !important;
 }
 
 ::ng-deep .mat-slider-thumb-label {
-	background-color: #1b1A1b !important;
+	background-color: #0892d0 !important;
 }
 
 ::ng-deep .mat-slider-track-fill {
-	background-color: #1b1A1b !important;
+	background-color: #0892d0 !important;
 }
 
 mat-slider {
     width: 100%;
+}
+
+//input outline color
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
+  color: #0892d0 !important;
 }
