--- a/libs/client/athlete-profile/feature/src/lib/athleteprofile/athleteprofile.component.scss
+++ b/libs/client/athlete-profile/feature/src/lib/athleteprofile/athleteprofile.component.scss
@@ -33,12 +33,12 @@ mat-form-field {
 
 #signup {
     width: 100%;
-    background-color: #0892d0 !important;
+    background-color: #1b1a1b !important;
 }
 
 .nextButton {
     width: 30%;
-    background-color: #0892d0 !important;
+    background-color: #1b1a1b !important;
 }
 
 .logIn {
@@ -102,18 +102,19 @@ textarea {
 ::ng-deep .mat-checkbox-checked .mat-checkbox-background,
 .mat-checkbox-indeterminate .mat-checkbox-background {
   background-color: #0892d0 !important;
+  background-color: #1b1a1b !important;
 }
 
 ::ng-deep .mat-slider-thumb {
-	background-color: #0892d0 !important;
+	background-color: #1b1a1b !important;
 }
 
 ::ng-deep .mat-slider-thumb-label {
-	background-color: #0892d0 !important;
+	background-color: #1b1a1b !important;
 }
 
 ::ng-deep .mat-slider-track-fill {
-	background-color: #0892d0 !important;
+	background-color: #1b1a1b !important;
 }
 
 mat-slider {
@@ -122,5 +123,5 @@ mat-slider {
 
 //input outline color
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
-  color: #0892d0 !important;
+  color: #1b1a1b !important;
 }
