--- a/libs/client/signup/feature/src/lib/signup/signup.component.scss
+++ b/libs/client/signup/feature/src/lib/signup/signup.component.scss
@@ -36,10 +36,39 @@ mat-grid-list {
 mat-card {
     // width: 90vw;
     // max-width: 400px;
+    box-shadow: none !important;
+    border-radius: 0px 10px 10px 0px;
+    // background-color: green;
+}
+
+#imagecard {
+    height: 100% !important;
+    object-fit: cover;
+    border-radius: 10px 0px 0px 10px;
+    background-color: white;
+}
+
+@media (max-width: 980px) {
+
+    mat-card {
+        box-shadow: none !important;
+        border-radius: 10px;
+    }
+
+    #imagecard {
+        display: none !important;
+    }
+
 }
 
 #form {
     max-width: 400px;
+    width: 80vw !important;
+    border-radius: 10px;
+}
+
+#imagecard {
+    max-width: 500px;
     width: 80vw !important;
 }
 
