--- a/libs/client/signup/feature/src/lib/signup/signup.component.scss
+++ b/libs/client/signup/feature/src/lib/signup/signup.component.scss
@@ -11,6 +11,9 @@ mat-grid-list {
     height: 100vw;
     max-height: 90vh;
     min-height: 800px;
+
+    position: relative;
+    top: 4.5%;
 }
 
 @media (max-width: 300px) {
@@ -36,6 +39,7 @@ mat-grid-list {
 mat-card {
     // width: 90vw;
     // max-width: 400px;
+    height: auto;
     box-shadow: none !important;
     border-radius: 0px 10px 10px 0px;
     // background-color: green;
@@ -74,6 +78,7 @@ mat-card {
 
 .text-center {
     text-align: center;
+    margin-top: 2%;
 }
 
 .submitButton {
@@ -130,6 +135,7 @@ mat-form-field {
 
 p {
     font-size: 12px !important;
+    margin-bottom: 0px !important;
 }
 
 .fullhint {
@@ -137,7 +143,9 @@ p {
 }
 
 #background {
-    height: 100vh !important;
+    width: 100vw !important;
+    height: 100%;
+    object-fit: cover;
     background-size: cover;
     background-repeat: no-repeat;
 }
