--- a/libs/client/schedule/feature/src/lib/workout/workout.component.html
+++ b/libs/client/schedule/feature/src/lib/workout/workout.component.html
@@ -22,7 +22,7 @@
               <p class="with-icon text-xl leading-6 text-gray-900 dark:text-gray-900 ">	<mat-icon> directions_bike</mat-icon> Activity Type</p>
             </dt>
             <dd class="mt-2  text-base">
-              <p class=""> {{workout?.startPoint}} </p>
+              <p class=""> {{workout?.activityType}} </p>
             </dd>
           </div>
           <div class="relative">
