--- a/libs/client/schedule/feature/src/lib/workout/workout.component.html
+++ b/libs/client/schedule/feature/src/lib/workout/workout.component.html
@@ -11,7 +11,7 @@
         <dl class="space-y-2 md:space-y-0 md:grid md:grid-cols-2 md:gap-x-8 md:gap-y-10">
           <div class="relative">
             <dt class="">
-              <p class="with-icon text-xl leading-6 text-gray-900 dark:text-gray-900 "><mat-icon>date_range</mat-icon> When</p>
+              <p class="with-icon text-xl leading-6 text-gray-600"><mat-icon>date_range</mat-icon> When</p>
             </dt>
             <dd class="mt-2  text-base">
               <p class="">{{workout?.startTime.day}} {{workout?.startTime.month}} {{workout?.startTime.year}} {{workout?.startTime.time}}</p>
@@ -19,7 +19,7 @@
           </div>
           <div class="relative">
             <dt class="">
-              <p class="with-icon text-xl leading-6 text-gray-900 dark:text-gray-900 ">	<mat-icon> directions_bike</mat-icon> Activity Type</p>
+              <p class="with-icon text-xl leading-6 text-gray-600  ">	<mat-icon> directions_bike</mat-icon> Activity Type</p>
             </dt>
             <dd class="mt-2  text-base">
               <p class=""> {{workout?.activityType}} </p>
@@ -27,7 +27,7 @@
           </div>
           <div class="relative">
             <dt class="">
-              <p class="with-icon text-xl leading-6 text-gray-900 dark:text-gray-900"><mat-icon> location_on</mat-icon> Where</p>
+              <p class="with-icon text-xl leading-6 text-gray-600"><mat-icon> location_on</mat-icon> Where</p>
             </dt>
             <dd class="mt-2  text-base">
               <p class=""> {{workout?.startPoint}} </p>
@@ -35,7 +35,7 @@
           </div>
           <div class="relative">
             <dt class="">
-              <p class="with-icon text-xl leading-6 text-gray-900 dark:divide-undefined dark:text-gray-900"><mat-icon>timelapse</mat-icon> Duration</p>
+              <p class="with-icon text-xl leading-6 text-gray-600"><mat-icon>timelapse</mat-icon> Duration</p>
             </dt>
             <dd class="mt-2  text-base">
               <p class=""> {{workout?.proposedDuration}} </p>
@@ -43,7 +43,7 @@
           </div>
           <div class="relative">
             <dt class="">
-              <p class="with-icon text-xl leading-6 text-gray-900 dark:text-gray-900"><mat-icon>date_range</mat-icon> Distance</p>
+              <p class="with-icon text-xl leading-6 text-gray-600"><mat-icon>date_range</mat-icon> Distance</p>
             </dt>
             <dd class="mt-2  text-base">
               <p class=""> {{workout?.proposedDistance}} km</p>
@@ -51,7 +51,7 @@
           </div>
           <div class="relative">
             <dt class="">
-              <p class="with-icon text-xl leading-6 text-gray-900 dark:text-gray-900">	<mat-icon> email</mat-icon> Organiser</p>
+              <p class="with-icon text-xl leading-6 text-gray-600">	<mat-icon> email</mat-icon> Organiser</p>
             </dt>
             <dd class="mt-2  text-base">
               <p class="">{{workout?.organiser}}</p>
