🐛fix settings bug

--- a/libs/client/settings/feature/src/lib/settings/settings.component.html
+++ b/libs/client/settings/feature/src/lib/settings/settings.component.html
@@ -1,9 +1,7 @@
-<!-- <div id="background" [ngStyle]="{'background-image': 'url(' + img + ')'}"> -->
 
-    <!-- <training-buddy-unsigned-navbar></training-buddy-unsigned-navbar> -->
     <training-buddy-back-navbar title="Settings"></training-buddy-back-navbar>
-
-    <mat-card class="mainCard mt-12">
+    <mat-grid-list cols="1" rows="1" rowHeight="2:1" class="pb-20">
+    <mat-card class="mainCard mt-12 mb-20">
 
         <!-- <figure class="relative flex flex-col-reverse bg-zinc-900 rounded-lg p-6 darkbg-zinc-900 dark:highlight-white/5">
             <blockquote class="mt-6 text-slate-700 dark:text-slate-300">
@@ -117,7 +115,7 @@
             </div>
 
         </mat-card-content>
-      </mat-card>
+    </mat-card>
+  </mat-grid-list>
     <training-buddy-navbar></training-buddy-navbar>
 
-<!-- </div> -->
