🐛fix edit profile bug

--- a/libs/client/athlete-profile/feature/src/lib/athleteprofile/athleteprofile.component.html
+++ b/libs/client/athlete-profile/feature/src/lib/athleteprofile/athleteprofile.component.html
@@ -2,7 +2,7 @@
   <training-buddy-unsigned-navbar *ngIf="!update"></training-buddy-unsigned-navbar>
   <training-buddy-back-navbar *ngIf="update" title="Activity Settings"></training-buddy-back-navbar>
 
-  <mat-grid-list cols="1" rows="1" rowHeight="2:1" [@fadeIn] >
+  <mat-grid-list cols="1" rows="1" rowHeight="2:1" class="pb-20" [@fadeIn] >
 
       <mat-card>
 
@@ -44,7 +44,7 @@
                 </div>
 
                 <div class="content-center">
-                  <div class=" mt-3 ml-1"><mat-label>{{ cycleRating }}/5 </mat-label></div>
+                  <div class=" mt-3 ml-1"><mat-label>{{ rideRating }}/5 </mat-label></div>
                 </div>
 
               </div>
