--- a/libs/client/athlete-profile/feature/src/lib/athleteprofile/athleteprofile.component.html
+++ b/libs/client/athlete-profile/feature/src/lib/athleteprofile/athleteprofile.component.html
@@ -22,7 +22,7 @@
                   step="0.1"
                   min="0"
                   max="5"
-                  aria-label="units" value="{{rateDefault}}"></mat-slider>
+                  aria-label="units" value="{{runRating}}"></mat-slider>
                 </div>
 
                 <div class="content-center">
@@ -40,7 +40,7 @@
                   step="0.1"
                   min="0"
                   max="5"
-                  aria-label=" units" value="{{rateDefault}}"></mat-slider>
+                  aria-label=" units" value="{{rideRating}}"></mat-slider>
                 </div>
 
                 <div class="content-center">
@@ -58,7 +58,7 @@
                   step="0.1"
                   min="0"
                   max="5"
-                  aria-label="units" value="{{rateDefault}}"></mat-slider>
+                  aria-label="units" value="{{swimRating}}"></mat-slider>
                 </div>
 
                 <div class="content-center">
@@ -76,7 +76,7 @@
                   step="0.1"
                   min="0"
                   max="5"
-                  aria-label="units" value="{{rateDefault}}"></mat-slider>
+                  aria-label="units" value="{{liftRating}}"></mat-slider>
                 </div>
 
                 <div class="content-center">
